# pcg-stein

./: .gitignore  Makefile  README.md  pyproject.toml  test.ipynb
.github/workflows/: static.yml
docs/: conf.py  index.rst  pcg_stein.rst  refs.bib
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  pcg_stein.html  py-modindex.html  search.html  searchindex.js
docs/api/: modules.rst  pcg_stein.distribution.rst  pcg_stein.kernel.rst  pcg_stein.linear.rst  pcg_stein.pcg.rst  pcg_stein.precon.rst  pcg_stein.registry.rst  pcg_stein.rst  pcg_stein.util.rst
experiments/: Makefile  README.md
experiments/fig1_experiment/: README.md  experiment.yaml  plot_fig.ipynb  run.py  run_batch.py
experiments/fig1_experiment/results/: fig1.csv  fig1_test.csv
experiments/fig2_experiment/: README.md  experiment.yaml  plot_fig.ipynb  run.py
experiments/fig2_experiment/results/: fig2_cg.csv  fig2_pcg.csv
experiments/fig3_experiment/: experiment.yaml  plot_fig.ipynb  run.py  run_batch.py
experiments/fig3_experiment/results/: fig3.csv
experiments/fig4_experiment/: README.md  experiment.yaml  plot_fig.ipynb  run.py  run_batch.py
experiments/fig4_experiment/results/: fig4.csv
experiments/fig5_experiment/: README.md  experiment.yaml  plot_fig.ipynb  run.py  run_batch.py
experiments/fig6_experiment/: experiment.yaml  plot_fig.ipynb  run.py
src/pcg_stein/: distribution.py  kernel.py  linear.py  pcg.py  precon.py  registry.py  util.py
src/pcg_stein.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+8 files in other folders)
